--- a/fern/docs/pages/tutorials/speech-credentials.mdx
+++ b/fern/docs/pages/tutorials/speech-credentials.mdx
@@ -42,7 +42,7 @@ which of provisioned vendors to use.
 ## Using different speech vendors during the same call
 
 You can also override the default speech credentials at any point during a call.
-To do so, you configure the [say](/verbs/verbs/say) verb with a [synthesizer](/verbs/verbs/synthesizer) property 
+To do so, you configure the [say](/verbs/verbs/say) verb with a `synthesizer` property 
 that specifies the vendor and voice to use for this specific text to speech request, or configure the 
 [gather](/verbs/verbs/gather) verb with a [recognizer](/verbs/verbs/recognizer) property that specifies the vendor, 
 language and possibly other properties for this specific speech to text request.
